--- a/indexPage.html
+++ b/indexPage.html
@@ -15,6 +15,15 @@ red:#B80C09
       .a{
         font-color:white;
       }
+      .h1{
+        color: white;
+        z-index: 100;
+      }
+      .ul{
+        z-index: 200;
+        padding:20px;
+      }
+
     </style>
 
   <link rel="stylesheet" href="stylesheet.css">
@@ -22,16 +31,28 @@ red:#B80C09
 </head>
 
 <body>
-<!--<div id = addToCart> <a> test </div> </a>
-<div id = logo> <a> test </div> </a>-->
-<toolbar>  </toolbar>
-<addToCart><a> add to cart</addToCart> </a>
-<logo> <img src="images/kid.jpg" alt="kid" width="100" height="75"></logo>
-<cart> <img src="images/checkout.jpg" alt="cart" width="100" height="75"></cart>
-<SearchBar><h5>This needs to be a search bar</h5></SearchBar>
-<ProductOnDisplay> <imageBorder><img src="images/linus.jpg" alt="gpu" width="750" height="600"><imageBorderCaption> Linus is such a great GPU placeholder </imageBorderCaption></imageBorder></ProductOnDisplay>
-<symbols> <imageBorder><img src="images/tyler.jpg" alt="power" width="200" height="200"><imageBorderCaption> so strong you'll cry </imageBorderCaption></imageBorder></symbols>
 
+<div class= "container">
+  <div class = "toolbar">
+
+    <div class = "logo"> <img src="images/kid.jpg" alt="kid" width="100" height="75"></div>
+    <div class = "cart"> <img src="images/checkout.jpg" alt="cart" width="100" height="75"></div>
+    <div class = "SearchBar"><h5>This needs to be a search bar</h5></div>
+</div>
+  <div class = "ProductOnDisplay">
+    <div class = "imageBorder"><img src="images/linus.jpg" alt="gpu" width="750" height="600">
+      <div class = "imageBorderCaption"> Linus is such a great GPU placeholder
+      </div>
+    </div>
+  </div>
+
+  <div class = "symbols">
+    <div class = "imageBorder">
+      <img src="images/tyler.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> so strong you'll cry
+      </div>
+    </div>
+  </div>
+</div>
 
 
 </body>
