--- a/indexPage.html
+++ b/indexPage.html
@@ -34,7 +34,13 @@ red:#B80C09
 
 <div class= "container">
   <div class = "toolbar">
-
+    <div class ="toolbarMenu">
+      <ul>
+        <li>Computer hardware </li>
+        <li>Computer peripherals</li>
+        <li>Games</li>
+      </ul>
+    </div>
     <div class = "logo"> <img src="images/kid.jpg" alt="kid" width="100" height="75"></div>
     <div class = "cart"> <img src="images/checkout.jpg" alt="cart" width="100" height="75"></div>
     <div class = "SearchBar"><h5>This needs to be a search bar</h5></div>
@@ -46,11 +52,18 @@ red:#B80C09
     </div>
   </div>
 
-  <div class = "symbols">
-    <div class = "imageBorder">
-      <img src="images/tyler.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> so strong you'll cry
-      </div>
-    </div>
+  <div class="symbolTable">
+    <ul>
+      <li>
+        <div class = "imageBorder"><img src="images/tyler.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> so strong you'll cry</div></div>
+      </li>
+      <li>
+        <div class = "imageBorder"><img src="images/tyler.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> so strong you'll cry</div></div>
+      </li>
+      <li>
+        <div class = "imageBorder"><img src="images/tyler.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> so strong you'll cry</div></div>
+      </li>
+    </ul>
   </div>
 </div>
 
