--- a/testPage.html
+++ b/testPage.html
@@ -26,29 +26,53 @@ red:#B80C09
 
     </style>
 
-  <link rel="stylesheet" href="stylesheet.css">
+  <link rel="stylesheet" href="testStylesheet.css">
 
 </head>
 
 <body>
-<!--<div class = addToCart> <a> test </div> </a>
-<div class = logo> <a> test </div> </a>-->
+
 <div class= "container">
   <div class = "toolbar">
-    <div class = "addToCart"><a> add to cart </a>
-      <div class = "logo"> <img src="images/kid.jpg" alt="kid" width="100" height="75">
-        <div class = "cart"> <img src="images/checkout.jpg" alt="cart" width="100" height="75">
-          <div class = "SearchBar"><h5>This needs to be a search bar</h5>
-            <div class = "ProductOnDisplay"> <div class = "imageBorder"><img src="images/linus.jpg" alt="gpu" width="750" height="600"><div class = "imageBorderCaption"> Linus is such a great GPU placeholder
-              <div class = "symbols"> <div class = "imageBorder"><img src="images/tyler.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> so strong you'll cry
+    <div class ="toolbarMenu">
+      <ul>
+        <li>Computer hardware </li>
+        <li>Computer peripherals</li>
+        <li>Games</li>
+      </ul>
+    </div>
+    <div class = "logo"> <img src="images/kid.jpg" alt="kid" width="100" height="75"></div>
+    <div class = "cart"> <img src="images/checkout.jpg" alt="cart" width="100" height="75"></div>
+    <div class = "SearchBar"><h5>This needs to be a search bar</h5></div>
 </div>
+  <div class = "ProductOnDisplay">
+    <div class = "imageBorder"><img src="images/linus.jpg" alt="gpu" width="750" height="600">
+      <div class = "imageBorderCaption"> Linus is such a great GPU placeholder
+      </div>
+    </div>
+  </div>
+
+  <div class="symbolTable">
+    <table>
+      <tr>
+        <td><div class = "imageBorder"><img src="images/tyler.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> so strong you'll cry</div></div></td>
+        <td><div class = "imageBorder"><img src="images/what.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> so strong but you won't cry</div></div></td>
+        <td><div class = "imageBorder"><img src="images/sad.jpg" alt="power" width="200" height="200"></div></td>
+      </tr>
+      <tr>
+        <td><div class = "imageBorder"><img src="images/tyler.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> so strong you'll cry</div></div></td>
+        <td><div class = "imageBorder"><img src="images/what.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption">  okay maybe a little </div></div></td>
+        <td><div class = "imageBorder"><img src="images/sad.jpg" alt="power" width="200" height="200"></div></td>
+      </td>
+      <tr>
+        <td><div class = "imageBorder"><img src="images/tyler.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> so strong you'll cry</div></div></td>
+        <td><div class = "imageBorder"><img src="images/what.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> jk you will def cry</div></div></td>
+        <td><div class = "imageBorder"><img src="images/sad.jpg" alt="power" width="200" height="200"></div></td>
+      </tr>
+    </table>
+  </div>
 </div>
-</div>
-</div>
-</div>
-</div>
-</div></div></div>
-</div></div></div>
+
 
 </body>
 </html>
