New color scheme, preview list for images underneath main product image
Found new color scheme, create a horizontal table of images underneath GPU

--- a/indexPage.html
+++ b/indexPage.html
@@ -52,18 +52,44 @@ red:#B80C09
     </div>
   </div>
 
-  <div class="symbolTable">
+  <div class="productImageTable">
     <ul>
+      <li> < </li>
       <li>
-        <div class = "imageBorder"><img src="images/tyler.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> so strong you'll cry</div></div>
+      <img src="images/pepehands.jpg" alt="power" width="100" height="100">
       </li>
       <li>
-        <div class = "imageBorder"><img src="images/tyler.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> so strong you'll cry</div></div>
+      <img src="images/pepehands.jpg" alt="power" width="100" height="100">
       </li>
       <li>
-        <div class = "imageBorder"><img src="images/tyler.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> so strong you'll cry</div></div>
+      <img src="images/pepehands.jpg" alt="power" width="100" height="100">
       </li>
+      <li>
+      <img src="images/pepehands.jpg" alt="power" width="100" height="100">
+      </li>
+      <li>
+      <img src="images/pepehands.jpg" alt="power" width="100" height="100">
+      </li>
+      <li> > </li>
     </ul>
+  </div>
+
+  <div class="symbolTable">
+    <table>
+      <tr>
+        <td><div class = "imageBorder"><img src="images/tyler.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> so strong you'll cry</div></div></td>
+        <td><div class = "imageBorder"><img src="images/what.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> so strong but you won't cry</div></div></td>
+
+      </tr>
+      <tr>
+        <td><div class = "imageBorder"><img src="images/tyler.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> so strong you'll cry</div></div></td>
+        <td><div class = "imageBorder"><img src="images/what.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption">  okay maybe a little </div></div></td>
+      <tr>
+        <td><div class = "imageBorder"><img src="images/tyler.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> so strong you'll cry</div></div></td>
+        <td><div class = "imageBorder"><img src="images/what.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption">jk you will def cry</div></div></td>
+
+      </tr>
+    </table>
   </div>
 </div>
 
