--- a/testPage.html
+++ b/testPage.html
@@ -4,16 +4,33 @@
 
   <title>CHARMIC 3090 Graphics Card </title>
 <!--****color palette****
+~~~set 1~~~
 black: #040F16
 off-white: #040F16
 light blue: #FBFBFF
 turqoise: #01BAEF
 red:#B80C09
+~~~end of set 1~~~~
+
+~~~set 2~~~
+flickr-pink: #f72585ff;
+byzantine: #b5179eff;
+purple: #7209b7ff;
+purple-2: #560badff;
+trypan-blue: #480ca8ff;
+trypan-blue-2: #3a0ca3ff;
+persian-blue: #3f37c9ff;
+ultramarine-blue: #4361eeff;
+dodger-blue: #4895efff;
+vivid-sky-blue: #4cc9f0ff;
+~~~end of set 2~~~
 ****end of color palette****-->
     <style>
-
+      h1{
+        z-index: 1000;
+      }
       .a{
-        font-color:white;
+        color: var(--flickr-pink);
       }
       .h1{
         color: white;
@@ -51,28 +68,77 @@ red:#B80C09
       </div>
     </div>
   </div>
+  <div class="productImageTable">
+    <ul>
+      <li> < </li>
+      <li>
+      <img src="images/tyler.jpg" alt="power" width="100" height="100">
+      </li>
+      <li>
+      <img src="images/tyler.jpg" alt="power" width="100" height="100">
+      </li>
+      <li>
+      <img src="images/tyler.jpg" alt="power" width="100" height="100">
+      </li>
+      <li>
+      <img src="images/tyler.jpg" alt="power" width="100" height="100">
+      </li>
+      <li>
+      <img src="images/tyler.jpg" alt="power" width="100" height="100">
+      </li>
+      <li > > </li>
+    </ul>
+  </div>
 
   <div class="symbolTable">
     <table>
       <tr>
         <td><div class = "imageBorder"><img src="images/tyler.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> so strong you'll cry</div></div></td>
         <td><div class = "imageBorder"><img src="images/what.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> so strong but you won't cry</div></div></td>
-        <td><div class = "imageBorder"><img src="images/sad.jpg" alt="power" width="200" height="200"></div></td>
+
       </tr>
       <tr>
         <td><div class = "imageBorder"><img src="images/tyler.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> so strong you'll cry</div></div></td>
         <td><div class = "imageBorder"><img src="images/what.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption">  okay maybe a little </div></div></td>
-        <td><div class = "imageBorder"><img src="images/sad.jpg" alt="power" width="200" height="200"></div></td>
-      </td>
       <tr>
         <td><div class = "imageBorder"><img src="images/tyler.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> so strong you'll cry</div></div></td>
-        <td><div class = "imageBorder"><img src="images/what.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> jk you will def cry</div></div></td>
-        <td><div class = "imageBorder"><img src="images/sad.jpg" alt="power" width="200" height="200"></div></td>
+        <td><div class = "imageBorder"><img src="images/what.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption">jk you will def cry</div></div></td>
+
       </tr>
     </table>
   </div>
 </div>
 
+<svg width="400" height="110">
+  <rect width="300" height="100" style="fill:var(--vivid-sky-blue); stroke-width:3;stroke:rgb(0,0,0)" />
+</svg>
+<svg width="400" height="110">
+  <rect width="300" height="100" style="fill:var(--dodger-blue); stroke-width:3;stroke:rgb(0,0,0)" />
+</svg>
+<svg width="400" height="110">
+  <rect width="300" height="100" style="fill:var(--ultramarine-blue); stroke-width:3;stroke:rgb(0,0,0)" />
+</svg>
+<svg width="400" height="110">
+  <rect width="300" height="100" style="fill:var(--persian-blue); stroke-width:3;stroke:rgb(0,0,0)" />
+</svg>
+<svg width="400" height="110">
+  <rect width="300" height="100" style="fill:var(--trypan-blue-2); stroke-width:3;stroke:rgb(0,0,0)" />
+</svg>
+<svg width="400" height="110">
+  <rect width="300" height="100" style="fill:var(--trypan-blue); stroke-width:3;stroke:rgb(0,0,0)" />
+</svg>
+<svg width="400" height="110">
+  <rect width="300" height="100" style="fill:var(--purple-2); stroke-width:3;stroke:rgb(0,0,0)" />
+</svg>
+<svg width="400" height="110">
+  <rect width="300" height="100" style="fill:var(--purple); stroke-width:3;stroke:rgb(0,0,0)" />
+</svg>
+<svg width="400" height="110">
+  <rect width="300" height="100" style="fill:var(--byzantine); stroke-width:3;stroke:rgb(0,0,0)" />
+</svg>
+<svg width="400" height="110">
+  <rect width="300" height="100" style="fill:var(--flickr-pink); stroke-width:3;stroke:rgb(0,0,0)" />
+</svg>
 
 </body>
 </html>
