Clean-up code, add ui features

--- a/testPage.html
+++ b/testPage.html
@@ -26,21 +26,6 @@ vivid-sky-blue: #4cc9f0ff;
 ~~~end of set 2~~~
 ****end of color palette****-->
     <style>
-      h1{
-        z-index: 1000;
-      }
-      .a{
-        color: var(--flickr-pink);
-      }
-      .h1{
-        color: white;
-        z-index: 100;
-      }
-      .ul{
-        z-index: 200;
-        padding:20px;
-      }
-
     </style>
 
   <link rel="stylesheet" href="testStylesheet.css">
@@ -59,9 +44,22 @@ vivid-sky-blue: #4cc9f0ff;
       </ul>
     </div>
     <div class = "logo"> <img src="images/kid.jpg" alt="kid" width="100" height="75"></div>
-    <div class = "cart"> <img src="images/checkout.jpg" alt="cart" width="100" height="75"></div>
+    <div class = "cart"> <img src="images/checkout.jpg" alt="cart" width="100" height="75"><figcaption><div class="textAlign">view cart</div></figcaption></div>
     <div class = "SearchBar"><h5>This needs to be a search bar</h5></div>
 </div>
+
+<div class="goBack"><a href="#charmic"> Graphics cards</a> &nbsp; > &nbsp; <a href="#charmic"> CHARMIC MARS MCTX 3080 10GB GDDR6X Video Card </a></div>
+
+
+<div class="productTitleTable"><table>
+  <tr>
+    <th colspan="2" > <div class="productTitle">CHARMIC MARS MCTX 3080 10GB GDDR6X Video Card</div></th>
+  </tr>
+  <tr>
+    <td><div class="productTitleSubtitles">star star star star .5 star (20 reviews)   &emsp;   Product code: 123190912300900</div></td>
+  </tr>
+</table>
+ </div>
   <div class = "ProductOnDisplay">
     <div class = "imageBorder"><img src="images/linus.jpg" alt="gpu" width="750" height="600">
       <div class = "imageBorderCaption"> Linus is such a great GPU placeholder
@@ -93,22 +91,34 @@ vivid-sky-blue: #4cc9f0ff;
   <div class="symbolTable">
     <table>
       <tr>
-        <td><div class = "imageBorder"><img src="images/tyler.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> so strong you'll cry</div></div></td>
-        <td><div class = "imageBorder"><img src="images/what.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> so strong but you won't cry</div></div></td>
-
+        <td><div class = "imageBorder"><img src="images/tyler.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> POWERFUL </div></div></td>
+        <td><div class ="gap"><div class = "imageBorder"><img src="images/what.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> FAST </div></div><div></td>
       </tr>
       <tr>
-        <td><div class = "imageBorder"><img src="images/tyler.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> so strong you'll cry</div></div></td>
-        <td><div class = "imageBorder"><img src="images/what.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption">  okay maybe a little </div></div></td>
-      <tr>
-        <td><div class = "imageBorder"><img src="images/tyler.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> so strong you'll cry</div></div></td>
-        <td><div class = "imageBorder"><img src="images/what.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption">jk you will def cry</div></div></td>
-
-      </tr>
+        <td><div class = "imageBorder"><img src="images/tyler.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> RGB</div></div></td>
+        <td><div class ="gap"><div class = "imageBorder"><img src="images/what.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption">  4 OUTPUTS </div></div></div></td>
     </table>
   </div>
+
+  <div class="priceList"> $499.99</div>
+  <div class="priceListButton" type="button"> Add to cart </button> </div>
+
+  <div class="productText">
+    <dl>
+      <dt> About the product </dt>
+      <br>
+      <dd> &nbsp; Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo <br>consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </dd>
+    </dl>
+  </div>
+
+
+
+<!--end of container -->
 </div>
 
+
+
+<!--these serve no purpose other than to view the colors -->
 <svg width="400" height="110">
   <rect width="300" height="100" style="fill:var(--vivid-sky-blue); stroke-width:3;stroke:rgb(0,0,0)" />
 </svg>
@@ -139,6 +149,6 @@ vivid-sky-blue: #4cc9f0ff;
 <svg width="400" height="110">
   <rect width="300" height="100" style="fill:var(--flickr-pink); stroke-width:3;stroke:rgb(0,0,0)" />
 </svg>
-
+<!--end of color viewer -->
 </body>
 </html>
