--- a/indexPage.html
+++ b/indexPage.html
@@ -4,35 +4,37 @@
 
   <title>CHARMIC 3090 Graphics Card </title>
 <!--****color palette****
+~~~set 1~~~
 black: #040F16
 off-white: #040F16
 light blue: #FBFBFF
 turqoise: #01BAEF
 red:#B80C09
+~~~end of set 1~~~~
+
+~~~set 2~~~
+flickr-pink: #f72585ff;
+byzantine: #b5179eff;
+purple: #7209b7ff;
+purple-2: #560badff;
+trypan-blue: #480ca8ff;
+trypan-blue-2: #3a0ca3ff;
+persian-blue: #3f37c9ff;
+ultramarine-blue: #4361eeff;
+dodger-blue: #4895efff;
+vivid-sky-blue: #4cc9f0ff;
+~~~end of set 2~~~
 ****end of color palette****-->
     <style>
-
-      .a{
-        font-color:white;
-      }
-      .h1{
-        color: white;
-        z-index: 100;
-      }
-      .ul{
-        z-index: 200;
-        padding:20px;
-      }
-
     </style>
 
   <link rel="stylesheet" href="stylesheet.css">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
 
-<div class= "container">
+<!--<div class= "container">-->
   <div class = "toolbar">
     <div class ="toolbarMenu">
       <ul>
@@ -41,57 +43,110 @@ red:#B80C09
         <li>Games</li>
       </ul>
     </div>
-    <div class = "logo"> <img src="images/kid.jpg" alt="kid" width="100" height="75"></div>
-    <div class = "cart"> <img src="images/checkout.jpg" alt="cart" width="100" height="75"></div>
+    <div class = "logo"> <img src="images/charmicLogo.png" alt="charmicLogo" width="90" height="75"></div>
+    <div class = "cart"> <img src="images/shoppingCart.png" alt="cart" width="100" height="75"><figcaption><div class="textAlign">view cart</div></figcaption></div>
     <div class = "SearchBar"><h5>This needs to be a search bar</h5></div>
 </div>
+
+<div class="goBack"><a href="#charmic"> Graphics cards</a> &nbsp; > &nbsp; <a href="#charmic"> CHARMIC MARS MCTX 3080 10GB GDDR6X Video Card </a></div>
+
+
+<div class="productTitleTable"><table>
+  <tr>
+    <th colspan="2" > <div class="productTitle">CHARMIC MARS MCTX 3080 10GB GDDR6X Video Card</div></th>
+  </tr>
+  <tr>
+    <td><div class="productTitleSubtitles"><span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star"></span> (20 reviews)   &emsp;   Product code: 123190912300900</div></td>
+  </tr>
+</table>
+ </div>
   <div class = "ProductOnDisplay">
-    <div class = "imageBorder"><img src="images/linus.jpg" alt="gpu" width="750" height="600">
-      <div class = "imageBorderCaption"> Linus is such a great GPU placeholder
+    <div class = "imageBorder"><img src="images/gpuMain.png" alt="gpu" width="750" height="600">
+      <div class = "imageBorderCaption"> *Different color variations available
       </div>
     </div>
   </div>
-
   <div class="productImageTable">
     <ul>
       <li> < </li>
       <li>
-      <img src="images/pepehands.jpg" alt="power" width="100" height="100">
+      <img src="images/gpu1.png" alt="power" width="100" height="100">
       </li>
       <li>
-      <img src="images/pepehands.jpg" alt="power" width="100" height="100">
+      <img src="images/gpu2.png" alt="power" width="100" height="100">
       </li>
       <li>
-      <img src="images/pepehands.jpg" alt="power" width="100" height="100">
+      <img src="images/gpu3.png" alt="power" width="100" height="100">
       </li>
       <li>
-      <img src="images/pepehands.jpg" alt="power" width="100" height="100">
+      <img src="images/gpu4.png" alt="power" width="100" height="100">
       </li>
       <li>
-      <img src="images/pepehands.jpg" alt="power" width="100" height="100">
+      <img src="images/gpu5.png" alt="power" width="100" height="100">
       </li>
-      <li> > </li>
+      <li > > </li>
     </ul>
   </div>
 
   <div class="symbolTable">
     <table>
       <tr>
-        <td><div class = "imageBorder"><img src="images/tyler.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> so strong you'll cry</div></div></td>
-        <td><div class = "imageBorder"><img src="images/what.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> so strong but you won't cry</div></div></td>
-
+        <td><div class = "imageBorder"><img src="images/images.png" alt="power" width="200" height="200"><div class = "imageBorderCaption"> POWERFUL </div></div></td>
+        <td><div class ="gap"><div class = "imageBorder"><img src="images/fast.png" alt="power" width="200" height="200"><div class = "imageBorderCaption"> FAST </div></div><div></td>
       </tr>
       <tr>
-        <td><div class = "imageBorder"><img src="images/tyler.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> so strong you'll cry</div></div></td>
-        <td><div class = "imageBorder"><img src="images/what.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption">  okay maybe a little </div></div></td>
-      <tr>
-        <td><div class = "imageBorder"><img src="images/tyler.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> so strong you'll cry</div></div></td>
-        <td><div class = "imageBorder"><img src="images/what.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption">jk you will def cry</div></div></td>
-
-      </tr>
+        <td><div class = "imageBorder"><img src="images/colorWheel.png" alt="power" width="200" height="200"><div class = "imageBorderCaption"> RGB</div></div></td>
+        <td><div class ="gap"><div class = "imageBorder"><img src="images/output.png" alt="power" width="200" height="200"><div class = "imageBorderCaption">  4 OUTPUTS </div></div></div></td>
     </table>
   </div>
-</div>
+
+  <div class="priceList"> $499.99</div>
+  <div class="priceListButton" type="button"> Add to cart </button> </div>
+
+  <div class="productText">
+    <dl>
+      <dt> About the product </dt>
+      <br>
+      <dd> &nbsp; Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo <br>consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </dd>
+    </dl>
+  </div>
+
+ <div class="contactUsBox">
+   <div class="contactUsTitle"> Contact us </div>
+   <div class="contactUsTable">
+   <table>
+
+     <tr>
+       <td>Phone Number</td>
+       <td>1-800-123-4567</td>
+
+     </tr>
+     <tr>
+       <td>Fax Number</td>
+       <td>(905)765-3210</td>
+
+     </tr>
+     <tr>
+       <td>E-mail</td>
+       <td>charmic@charmicservice.com</td>
+
+     </tr>
+     <tr>
+       <td>Address</td>
+       <td>20 Charmic Rd, Toronto, Ontario, 1ML 3R5</td>
+
+     </tr>
+
+    </table>
+ </div>
+ </div>
+
+<!--end of container -->
+<!--</div>-->
 
 
 </body>
