--- a/testPage.html
+++ b/testPage.html
@@ -29,7 +29,7 @@ vivid-sky-blue: #4cc9f0ff;
     </style>
 
   <link rel="stylesheet" href="testStylesheet.css">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -43,8 +43,8 @@ vivid-sky-blue: #4cc9f0ff;
         <li>Games</li>
       </ul>
     </div>
-    <div class = "logo"> <img src="images/kid.jpg" alt="kid" width="100" height="75"></div>
-    <div class = "cart"> <img src="images/checkout.jpg" alt="cart" width="100" height="75"><figcaption><div class="textAlign">view cart</div></figcaption></div>
+    <div class = "logo"> <img src="images/charmicLogo.png" alt="kid" width="90" height="75"></div>
+    <div class = "cart"> <img src="images/shoppingCart.png" alt="cart" width="100" height="75"><figcaption><div class="textAlign">view cart</div></figcaption></div>
     <div class = "SearchBar"><h5>This needs to be a search bar</h5></div>
 </div>
 
@@ -56,13 +56,17 @@ vivid-sky-blue: #4cc9f0ff;
     <th colspan="2" > <div class="productTitle">CHARMIC MARS MCTX 3080 10GB GDDR6X Video Card</div></th>
   </tr>
   <tr>
-    <td><div class="productTitleSubtitles">star star star star .5 star (20 reviews)   &emsp;   Product code: 123190912300900</div></td>
+    <td><div class="productTitleSubtitles"><span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star"></span> (20 reviews)   &emsp;   Product code: 123190912300900</div></td>
   </tr>
 </table>
  </div>
   <div class = "ProductOnDisplay">
-    <div class = "imageBorder"><img src="images/linus.jpg" alt="gpu" width="750" height="600">
-      <div class = "imageBorderCaption"> Linus is such a great GPU placeholder
+    <div class = "imageBorder"><img src="images/gpuMain.png" alt="gpu" width="750" height="600">
+      <div class = "imageBorderCaption"> *Different color variations available
       </div>
     </div>
   </div>
@@ -70,19 +74,19 @@ vivid-sky-blue: #4cc9f0ff;
     <ul>
       <li> < </li>
       <li>
-      <img src="images/tyler.jpg" alt="power" width="100" height="100">
+      <img src="images/gpu1.png" alt="power" width="100" height="100">
       </li>
       <li>
-      <img src="images/tyler.jpg" alt="power" width="100" height="100">
+      <img src="images/gpu2.png" alt="power" width="100" height="100">
       </li>
       <li>
-      <img src="images/tyler.jpg" alt="power" width="100" height="100">
+      <img src="images/gpu3.png" alt="power" width="100" height="100">
       </li>
       <li>
-      <img src="images/tyler.jpg" alt="power" width="100" height="100">
+      <img src="images/gpu4.png" alt="power" width="100" height="100">
       </li>
       <li>
-      <img src="images/tyler.jpg" alt="power" width="100" height="100">
+      <img src="images/gpu5.png" alt="power" width="100" height="100">
       </li>
       <li > > </li>
     </ul>
@@ -91,12 +95,12 @@ vivid-sky-blue: #4cc9f0ff;
   <div class="symbolTable">
     <table>
       <tr>
-        <td><div class = "imageBorder"><img src="images/tyler.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> POWERFUL </div></div></td>
-        <td><div class ="gap"><div class = "imageBorder"><img src="images/what.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> FAST </div></div><div></td>
+        <td><div class = "imageBorder"><img src="images/images.png" alt="power" width="200" height="200"><div class = "imageBorderCaption"> POWERFUL </div></div></td>
+        <td><div class ="gap"><div class = "imageBorder"><img src="images/fast.png" alt="power" width="200" height="200"><div class = "imageBorderCaption"> FAST </div></div><div></td>
       </tr>
       <tr>
-        <td><div class = "imageBorder"><img src="images/tyler.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption"> RGB</div></div></td>
-        <td><div class ="gap"><div class = "imageBorder"><img src="images/what.jpg" alt="power" width="200" height="200"><div class = "imageBorderCaption">  4 OUTPUTS </div></div></div></td>
+        <td><div class = "imageBorder"><img src="images/colorWheel.png" alt="power" width="200" height="200"><div class = "imageBorderCaption"> RGB</div></div></td>
+        <td><div class ="gap"><div class = "imageBorder"><img src="images/output.png" alt="power" width="200" height="200"><div class = "imageBorderCaption">  4 OUTPUTS </div></div></div></td>
     </table>
   </div>
 
@@ -111,7 +115,35 @@ vivid-sky-blue: #4cc9f0ff;
     </dl>
   </div>
 
+ <div class="contactUsBox">
+   <div class="contactUsTitle"> Contact us </div>
+   <div class="contactUsTable">
+   <table>
 
+     <tr>
+       <td>Phone Number</td>
+       <td>1-800-123-4567</td>
+
+     </tr>
+     <tr>
+       <td>Fax Number</td>
+       <td>(905)765-3210</td>
+
+     </tr>
+     <tr>
+       <td>E-mail</td>
+       <td>charmic@charmicservice.com</td>
+
+     </tr>
+     <tr>
+       <td>Address</td>
+       <td>20 Charmic Rd, Toronto, Ontario, 1ML 3R5</td>
+
+     </tr>
+
+    </table>
+ </div>
+ </div>
 
 <!--end of container -->
 </div>
